modificada la generación del comando ffmpeg para detectar automaticamente la GPU